--- a/wheel.html
+++ b/wheel.html
@@ -251,7 +251,7 @@
       const extraTurns = 5 + Math.floor(Math.random() * 3);
       console.log('Extra Turns:', extraTurns);
       
-      const minAngle = (index * anglePerSegment); - 0.02;
+      const minAngle = (index * anglePerSegment) - 0.02;
       console.log('Min Angle:', minAngle);
       
       const maxAngle = minAngle + anglePerSegment + 0.02;
