--- a/wheel.html
+++ b/wheel.html
@@ -258,7 +258,7 @@
       console.log('Max Angle:', maxAngle);
       
       // const targetAngleInSector = Math.random() * (maxAngle - minAngle) + minAngle;
-      const targetAngleInSector = minAngle;
+      const targetAngleInSector = maxAngle;
       console.log('Target Angle in Sector:', targetAngleInSector);
       
       const pointerAdjustment = Math.PI / 2;
