--- a/wheel.html
+++ b/wheel.html
@@ -254,7 +254,7 @@
       const minAngle = (index * anglePerSegment) - 0.02;
       console.log('Min Angle:', minAngle);
       
-      const maxAngle = minAngle + anglePerSegment + 0.02;
+      const maxAngle = minAngle + anglePerSegment; // + 0.02;
       console.log('Max Angle:', maxAngle);
       
       // const targetAngleInSector = Math.random() * (maxAngle - minAngle) + minAngle;
