--- a/wheel.html
+++ b/wheel.html
@@ -129,17 +129,17 @@
     const popup = document.getElementById("rewardPopup");
 
     const rewards = [
-      { type: 'exp_loss', value: 12, text: 'Опыт -12', color: '#C62828' },
+      { type: 'exp_loss', value: 12, text: 'Опыт -12', color: '#D32F2F' },
       { type: 'exp_gain', value: 12, text: 'Опыт +12', color: '#2E7D32' },
       { type: 'exp_loss', value: 6,  text: 'Опыт -6',  color: '#AD1457' },
       { type: 'item',     value: 'legendary', text: '🎁', color: '#FFD700' },
-      { type: 'exp_loss', value: 3,  text: 'Опыт -3',  color: '#1565C0' },
-      { type: 'premium',  value: 3,  text: 'Премиум аккаунт (3 дня)', color: '#6A1B9A' },
-      { type: 'exp_loss', value: 3,  text: 'Опыт -3',  color: '#43A047' },
+      { type: 'exp_loss', value: 3,  text: 'Опыт -3',  color: '#F44336' },
+      { type: 'premium',  value: 3,  text: 'Премиум аккаунт (3 дня)', color: '#689F38' },
+      { type: 'exp_loss', value: 3,  text: 'Опыт -3',  color: '#1976D2' },
       { type: 'raid',     value: 'clear', text: 'Сброс таймера /raid', color: '#F57C00' },
-      { type: 'exp_loss', value: 24, text: 'Опыт -24', color: '#8E24AA' },
+      { type: 'exp_loss', value: 24, text: 'Опыт -24', color: '#D32F2F' },
       { type: 'exp_gain', value: 6,  text: 'Опыт +6',  color: '#0288D1' },
-      { type: 'none',     value: 'none', text: 'Повезёт в следующий раз', color: '#D32F2F' },
+      { type: 'none',     value: 'none', text: 'Повезёт в следующий раз', color: '#AD1457' },
       { type: 'exp_loss', value: 15, text: 'Опыт -15', color: '#00796B' },
       { type: 'item',     value: 'epic', text: '🎁', color: '#8E24AA' },
       { type: 'exp_loss', value: 18, text: 'Опыт -18', color: '#F44336' },
