--- a/wheel.html
+++ b/wheel.html
@@ -133,7 +133,7 @@
       { type: 'exp_gain', value: 12, text: 'Опыт +12', color: '#2E7D32' },
       { type: 'exp_loss', value: 6,  text: 'Опыт -6',  color: '#AD1457' },
       { type: 'item',     value: 'legendary', text: '🎁', color: '#FFD700' },
-      { type: 'tokens', value: 25,  text: '💰 25 жетонов',  color: '#F44336' },
+      { type: 'tokens', value: 25,  text: '💰 25 Жетонов',  color: '#F44336' },
       { type: 'premium',  value: 3,  text: 'Премиум аккаунт (3 дня)', color: '#689F38' },
       { type: 'exp_loss', value: 3,  text: 'Опыт -3',  color: '#1976D2' },
       { type: 'raid',     value: 'clear', text: 'Сброс таймера /raid', color: '#F57C00' },
